--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="col-md-4 fasilitas-item">
             <div class="card">
               <img
-                src="assets/lapangan.jpg"
+                src="assets/Lapangan.jpg"
                 class="card-img-top"
                 alt="Lapangan"
               />
