--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <!-- Testimoni Section -->
     <div class="container-fluid cardcontainer" id="testimoni">
       <h2 class="section-title">Testimoni</h2>
-      <div class="swiper mySwiper" data-aos="fade-down">
+      <div class="swiper mySwiper" data-aos="fade-up">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="card text-center cardtestimoni">
@@ -401,7 +401,7 @@
     <section id="harga" class="harga-section">
       <div class="container">
         <h2 class="section-title">Harga</h2>
-        <div class="row justify-content-center" data-aos="fade-down">
+        <div class="row justify-content-center" data-aos="fade-up">
           <!-- Lapangan 1 Card -->
           <div class="col-md-5 harga-item">
             <div class="card harga-card">
