--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                   </div>
                 </div>
                 <a
-                  href="https://wa.me/yourphonenumber?text=Saya%20ingin%20booking%20Lapangan%201%20pada%20tanggal%20dan%20jam%20tersebut"
+                href="javascript:void(0);"
                   class="btn btn-primary mt-3"
                   target="_blank"
                   >Booking Sekarang</a
@@ -577,7 +577,7 @@
                   </div>
                 </div>
                 <a
-                  href="https://wa.me/yourphonenumber?text=Saya%20ingin%20booking%20Lapangan%202%20pada%20tanggal%20dan%20jam%20tersebut"
+                href="javascript:void(0);"
                   class="btn btn-primary mt-3"
                   target="_blank"
                   >Booking Sekarang</a
